--- a/dashboard.html
+++ b/dashboard.html
@@ -1,45 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="sv">
-<head>
-    <meta charset="UTF-8">
-    <title>Rättsagt Dashboard</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="gpt-button.js" defer></script>
-    <script src="bibliotek.js" defer></script>
-    <script src="nyhetsflode.js" defer></script>
-</head>
-<body>
-    <header>
-        <h1>Rättsagt Dashboard</h1>
-    </header>
-
-    <section id="gpt-knapp">
-        <button onclick="startGpt()">GPT-knapp</button>
-    </section>
-
-    <section id="min-resa">
-        <h2>Min resa</h2>
-        <p>Här kommer det en framtida sammanställning av vad du och GPT gjort tillsammans</p>
-    </section>
-
-    <section id="att-gora">
-        <h2>Att göra-lista</h2>
-        <ul id="todo-list">
-            <li>✔️ Inget att göra just nu</li>
-        </ul>
-    </section>
-
-    <section id="bibliotek">
-        <h2>📚 Biblioteket – ladda upp och visa filer</h2>
-        <input type="file" id="fileInput">
-        <button onclick="uploadFile()">Ladda upp</button>
-        <ul id="fileList"></ul>
-    </section>
-
-    <section id="nyheter">
-        <h2>🗞️ Senaste viktiga händelser</h2>
-        <div id="news-container">Inga nyheter än.</div>
-    </section>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Dashboard</title><link rel='stylesheet' href='style.css'></head><body><h1>Rättsagt Dashboard</h1><button onclick='activateGPT()'>GPT-knapp</button><div id='resa'>Min resa: Här kommer det en framtida sammanställning av vad du och GPT gjort tillsammans.</div><div id='todo'>Att göra: <ul id='todo-list'></ul></div><div id='events'>Senaste viktiga händelser:</div><div id='economy'>Ekonomi & skatteplanering: <ul><li>Lön</li><li>Utdelning</li><li>Moms & Skatt</li></ul></div><div id='bibliotek'><h2>Biblioteket – ladda upp & visa filer</h2><input type='file' id='fileInput'><button onclick='uploadFile()'>Ladda upp</button><ul id='fileList'></ul></div><div id='news'>Nyheter och notiser:</div><script src='session-handler.js'></script><script src='gpt.js'></script><script src='bibliotek.js'></script><script src='to-do.js'></script><script src='events.js'></script><script src='economy.js'></script></body></html>
