--- a/index.html
+++ b/index.html
@@ -1,23 +1,1 @@
-<!DOCTYPE html>
-<html lang="sv">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Logga in – Rattsagt.se</title>
-    <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-<div class="container">
-    <h1>Logga in på Rattsagt.se</h1>
-    <form id="loginform">
-        <label for="username">Användarnamn:</label><br />
-        <input type="text" id="username" name="username" required /><br /><br />
-        <label for="password">Lösenord:</label><br />
-        <input type="password" id="password" name="password" required /><br /><br />
-        <button type="submit">Logga in</button>
-    </form>
-    <p id="message" style="color:red;"></p>
-</div>
-<script defer src="login.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Login</title><link rel='stylesheet' href='style.css'></head><body><h2>Logga in</h2><form onsubmit='login(event)'><input type='text' id='username' placeholder='Användarnamn'><input type='password' id='password' placeholder='Lösenord'><button type='submit'>Logga in</button></form><script src='login.js'></script></body></html>
