--- a/dashboard.html
+++ b/dashboard.html
@@ -1,1 +1,49 @@
-<!DOCTYPE html><html><head><title>Dashboard</title><link rel='stylesheet' href='style.css'></head><body><h1>Rättsagt Dashboard</h1><button onclick='activateGPT()'>GPT-knapp</button><div id='resa'>Min resa: Här kommer det en framtida sammanställning av vad du och GPT gjort tillsammans.</div><div id='todo'>Att göra: <ul id='todo-list'></ul></div><div id='events'>Senaste viktiga händelser:</div><div id='economy'>Ekonomi & skatteplanering: <ul><li>Lön</li><li>Utdelning</li><li>Moms & Skatt</li></ul></div><div id='bibliotek'><h2>Biblioteket – ladda upp & visa filer</h2><input type='file' id='fileInput'><button onclick='uploadFile()'>Ladda upp</button><ul id='fileList'></ul></div><div id='news'>Nyheter och notiser:</div><script src='session-handler.js'></script><script src='gpt.js'></script><script src='bibliotek.js'></script><script src='to-do.js'></script><script src='events.js'></script><script src='economy.js'></script></body></html>
+<!DOCTYPE html>
+<html lang="sv">
+<head>
+    <meta charset="UTF-8">
+    <title>Rättsagt Dashboard</title>
+    <link rel="stylesheet" href="style.css">
+    <script defer src="bibliotek.js"></script>
+</head>
+<body>
+    <h1>Rättsagt Dashboard</h1>
+    <button onclick="startGPT()">GPT-knapp</button>
+
+    <section>
+        <h2>Min resa</h2>
+        <p>Här kommer det en framtida sammanställning av vad du och GPT gjort tillsammans.</p>
+    </section>
+
+    <section>
+        <h2>Att göra:</h2>
+        <ul><li>Inget att göra just nu</li></ul>
+    </section>
+
+    <section>
+        <h2>Senaste viktiga händelser</h2>
+        <p>Systemet är uppdaterat.</p>
+    </section>
+
+    <section>
+        <h2>Ekonomi & skatteplanering</h2>
+        <ul>
+            <li>Lön</li>
+            <li>Utdelning</li>
+            <li>Moms & Skatt</li>
+        </ul>
+        <p>Intäktsöversikt: 0 kr</p>
+    </section>
+
+    <section>
+        <h2>Biblioteket – ladda upp & visa filer</h2>
+        <input type="file" id="fileInput"><button onclick="uploadFile()">Ladda upp</button>
+        <ul id="fileList"></ul>
+    </section>
+
+    <section>
+        <h2>Nyheter och notiser:</h2>
+        <ul><li>Inga nya notiser just nu.</li></ul>
+    </section>
+</body>
+</html>
