--- a/min-resa.html
+++ b/min-resa.html
@@ -1,13 +1,8 @@
 
-<!DOCTYPE html>
-<html lang="sv">
-<head>
-    <meta charset="UTF-8">
-    <title>Min Resa</title>
-    <link rel="stylesheet" href="gpt-style.css">
-</head>
-<body>
-    <h1>Min resa</h1>
-    <p>Här kommer det en framtida sammanställning av vad du och GPT gjort tillsammans</p>
-</body>
-</html>
+<!-- min-resa.html -->
+<section id="min-resa">
+  <h2>Min resa</h2>
+  <div id="resa-innehall">
+    Här kommer en framtida sammanställning av vad du och GPT gjort tillsammans.
+  </div>
+</section>
