--- a/min-resa.html
+++ b/min-resa.html
@@ -1,8 +1,13 @@
-
-<!-- min-resa.html -->
-<section id="min-resa">
-  <h2>Min resa</h2>
-  <div id="resa-innehall">
-    Här kommer en framtida sammanställning av vad du och GPT gjort tillsammans.
-  </div>
-</section>
+<!DOCTYPE html>
+<html lang="sv">
+<head>
+  <meta charset="UTF-8" />
+  <title>Min resa</title>
+  <link rel="stylesheet" href="style.css" />
+  <script defer src="min-resa.js"></script>
+</head>
+<body>
+  <h1>Min resa med GPT</h1>
+  <div id="gpt-logg"></div>
+</body>
+</html>
