--- a/bibliotek.html
+++ b/bibliotek.html
@@ -1,16 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="sv">
-<head>
-    <meta charset="UTF-8">
-    <title>Bibliotek</title>
-    <link rel="stylesheet" href="gpt-style.css">
-</head>
-<body>
-    <h1>Biblioteket – ladda upp och visa filer</h1>
-    <input type="file" id="fileInput">
-    <button onclick="uploadFile()">Ladda upp</button>
-    <ul id="fileList"></ul>
-    <script src="gpt-minne.js"></script>
-</body>
-</html>
+<h2>Bibliotek</h2>
