--- a/dashboard.html
+++ b/dashboard.html
@@ -1,49 +1,1 @@
-<!DOCTYPE html>
-<html lang="sv">
-<head>
-    <meta charset="UTF-8">
-    <title>Rättsagt Dashboard</title>
-    <link rel="stylesheet" href="style.css">
-    <script defer src="bibliotek.js"></script>
-</head>
-<body>
-    <h1>Rättsagt Dashboard</h1>
-    <button onclick="startGPT()">GPT-knapp</button>
-
-    <section>
-        <h2>Min resa</h2>
-        <p>Här kommer det en framtida sammanställning av vad du och GPT gjort tillsammans.</p>
-    </section>
-
-    <section>
-        <h2>Att göra:</h2>
-        <ul><li>Inget att göra just nu</li></ul>
-    </section>
-
-    <section>
-        <h2>Senaste viktiga händelser</h2>
-        <p>Systemet är uppdaterat.</p>
-    </section>
-
-    <section>
-        <h2>Ekonomi & skatteplanering</h2>
-        <ul>
-            <li>Lön</li>
-            <li>Utdelning</li>
-            <li>Moms & Skatt</li>
-        </ul>
-        <p>Intäktsöversikt: 0 kr</p>
-    </section>
-
-    <section>
-        <h2>Biblioteket – ladda upp & visa filer</h2>
-        <input type="file" id="fileInput"><button onclick="uploadFile()">Ladda upp</button>
-        <ul id="fileList"></ul>
-    </section>
-
-    <section>
-        <h2>Nyheter och notiser:</h2>
-        <ul><li>Inga nya notiser just nu.</li></ul>
-    </section>
-</body>
-</html>
+<!DOCTYPE html><html lang='sv'><head><meta charset='UTF-8'><title>Rättsagt Dashboard</title></head><body><h1>Dashboard</h1></body></html>
