--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>Login</title><link rel='stylesheet' href='style.css'></head><body><h2>Logga in</h2><form onsubmit='login(event)'><input type='text' id='username' placeholder='Användarnamn'><input type='password' id='password' placeholder='Lösenord'><button type='submit'>Logga in</button></form><script src='login.js'></script></body></html>
+<!DOCTYPE html><html lang='sv'><head><meta charset='UTF-8'><title>Rättsagt – Logga in</title></head><body><h1>Logga in</h1></body></html>
