--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!DOCTYPE html><html lang='sv'><head><meta charset='UTF-8'><title>Rättsagt – Logga in</title></head><body><h1>Logga in</h1></body></html>
+<!DOCTYPE html>
+<html lang="sv">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rätt Sagt Dashboard</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Välkommen till Rätt Sagt Dashboard</h1>
+    <div id="app"></div>
+    <script src="dashboard.js"></script>
+</body>
+</html>
