--- a/ekonomi.html
+++ b/ekonomi.html
@@ -1,23 +1,1 @@
-
-<!-- ekonomi.html -->
-<section id="ekonomi">
-  <h2>💼 Ekonomi & Skatteplanering</h2>
-  <div class="ekonomi-panel">
-    <p>Här kan du hantera lön, utdelning, moms och andra viktiga delar av din ekonomi.</p>
-    <ul>
-      <li><strong>Lön:</strong> Ange din månadslön</li>
-      <li><strong>Utdelning:</strong> Planera och registrera utdelning</li>
-      <li><strong>Moms:</strong> Redovisa och beräkna</li>
-    </ul>
-    <form id="ekonomiForm">
-      <label for="lon">Lön (kr):</label>
-      <input type="number" id="lon" name="lon"><br>
-      <label for="utdelning">Utdelning (kr):</label>
-      <input type="number" id="utdelning" name="utdelning"><br>
-      <label for="moms">Moms (kr):</label>
-      <input type="number" id="moms" name="moms"><br>
-      <button type="submit">Spara</button>
-    </form>
-    <div id="ekonomiResultat"></div>
-  </div>
-</section>
+<!DOCTYPE html><html><head><title>Ekonomi</title></head><body><h1>Ekonomisektion</h1></body></html>
