--- a/dashboard.html
+++ b/dashboard.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html lang='sv'><head><meta charset='UTF-8'><title>Rättsagt Dashboard</title></head><body><h1>Dashboard</h1></body></html>
+<!DOCTYPE html><html><head><title>Dashboard</title><link rel='stylesheet' href='style.css'></head><body><h1>Dashboard</h1><div id='app'></div><script src='dashboard.js'></script></body></html>
