--- a/login.html
+++ b/login.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html lang='sv'><head><meta charset='UTF-8'><title>Login</title></head><body><form><input type='text' name='user'></form></body></html>
+<!DOCTYPE html><html><head><title>Login</title></head><body><form><input type='text' placeholder='Username'><input type='password' placeholder='Password'><button type='submit'>Login</button></form><script src='login.js'></script></body></html>
