--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html lang="sv">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rätt Sagt Dashboard</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1>Välkommen till Rätt Sagt Dashboard</h1>
-    <div id="app"></div>
-    <script src="dashboard.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset='UTF-8'><title>Login</title><script src='login.js'></script></head><body><h2>Logga in</h2><form onsubmit='return login()'><input type='text' id='username' placeholder='Användarnamn'><br><input type='password' id='password' placeholder='Lösenord'><br><button type='submit'>Logga in</button></form></body></html>
