--- a/dashboard.html
+++ b/dashboard.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><title>Dashboard</title><link rel='stylesheet' href='style.css'><script src='session-handler.js'></script><script src='dashboard.js'></script></head><body><h1>Rättsagt Dashboard</h1><div id='main'></div></body></html>
+<!DOCTYPE html><html><head><title>Dashboard</title></head><body><h1>Welcome</h1></body></html>
