--- a/login.html
+++ b/login.html
@@ -1,1 +1,1 @@
-<!-- login.html -->
+<html><body><form><input type='email' placeholder='E-post'><input type='password' placeholder='Lösenord'><button>Logga in</button></form></body></html>
